apps/immich/notify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-memories-notify
  labels:
    app: immich-memories-notify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-memories-notify
  template:
    metadata:
      labels:
        app: immich-memories-notify
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: apps
                    operator: Exists
      tolerations:
        - key: apps
          operator: Exists
          effect: NoSchedule
      containers:
        - name: notify
          image: ghcr.io/novog93/immich-memories-notify:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.yaml
              subPath: config.yaml
              readOnly: true
              
      volumes:
        - name: config-volume
          configMap:
            name: immich-notify-config
