apps/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-http
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: nginx-gateway
  hostnames:
    - immich-gateway.novotny.live
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
